--- a/BUDatathon_MLP.ipynb
+++ b/BUDatathon_MLP.ipynb
@@ -42,7 +42,8 @@
    "source": [
     "# Multilayer Perceptron\n",
     "\n",
-    "A class of supervised artificial neural network. An MLP consists of at least three layers of nodes. Except for the input nodes, each node is a neuron that uses a nonlinear activation function. "
+    "A class of supervised artificial neural network. An MLP consists of at least three layers of nodes. Except for the input nodes, each node is a neuron that uses a nonlinear activation function. The Following is the activation function used in MLP.
+![image.png](attachment:image.png)"
    ]
   },
   {
